# ChangeLog for xfce-extra/xfce4-weather
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather/ChangeLog,v 1.59 2009/07/27 19:13:39 jer Exp $

  27 Jul 2009; Jeroen Roovers <jer@gentoo.org> xfce4-weather-0.6.4.ebuild:
  Stable for HPPA (bug #277475).

*xfce4-weather-0.7.1 (22 Jul 2009)

  22 Jul 2009; Pielmeier Daniel <billie@gentoo.org>
  +xfce4-weather-0.7.1.ebuild:
  Version bump.

  16 Jul 2009; Raúl Porcel <armin76@gentoo.org> xfce4-weather-0.6.4.ebuild:
  alpha/arm/ia64/sparc stable wrt #277475

  16 Jul 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-weather-0.6.4.ebuild:
  amd64 stable, bug 277475

  15 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  xfce4-weather-0.6.4.ebuild:
  stable x86, bug 277475

  09 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-weather-0.6.4.ebuild:
  Run intltoolize because this tarball was generated with bad intltool
  0.40.6 wrt #277255.

*xfce4-weather-0.6.4 (08 Jul 2009)

  08 Jul 2009; Jeremy Olexa <darkside@gentoo.org>
  +xfce4-weather-0.6.4.ebuild:
  version bump, by Josh Saddler bug 277002

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> xfce4-weather-0.6.2.ebuild:
  Stable for HPPA (bug #201747).

  12 Dec 2007; Brent Baude <ranger@gentoo.org> xfce4-weather-0.6.2.ebuild:
  Marking xfce4-weather-0.6.2 ppc64 stable for bug 201747

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> xfce4-weather-0.6.2.ebuild:
  alpha/ia64/sparc stable wrt #201747

  09 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfce4-weather-0.6.2.ebuild:
  ppc stable, bug #201747

  09 Dec 2007; Dawid Węgliński <cla@gentoo.org>
  xfce4-weather-0.6.2.ebuild:
  Stable on amd64/x86 (bug #201747)

*xfce4-weather-0.6.2 (18 Nov 2007)

  18 Nov 2007; Christoph Mende <angelos@gentoo.org>
  -xfce4-weather-0.6.1.ebuild, +xfce4-weather-0.6.2.ebuild:
  Version bump

  18 Nov 2007; Christoph Mende <angelos@gentoo.org>