@@ -1,8 +1,10 @@
 DIST xfce4-weather-plugin-0.6.2.tar.bz2 555001 RMD160 d849b3e6dcc5b147bb9bd9b771dcc5d51da0e7e1 SHA1 dbe7e6695cd647aaf843dc790d9bb37ea95c83ea SHA256 279e78f2efa97baec74ade294143dbc1f3f4bb5e3f457724e9dbbeac1c269605
 DIST xfce4-weather-plugin-0.6.4.tar.bz2 671835 RMD160 98e80d83d25a34af59975b5a44c0e7d8761a637c SHA1 b5ba0de8f962ed4b225e1c5d5629e3a0a43a25d9 SHA256 f92880f82d5934061cf2ce2581f1bf51c4221a57fcde9fb5352959273b51e1cd
 DIST xfce4-weather-plugin-0.7.1.tar.bz2 666205 RMD160 708cea2adda832e6d8aadcfcac3f60538e23f6ea SHA1 f6e8d93905c61425f3b510daab65fb7cd8ecbdb8 SHA256 08835749cc4c865dc7d685c6b4829db1b96758121100558b6f9513da8b43c4bd
+DIST xfce4-weather-plugin-0.7.2.tar.bz2 660337 RMD160 3fa771d34da173c62c86ba9ac39d781adc407998 SHA1 2d01fa46356fbdaf8aff75b63a2b3c8bd257894d SHA256 5b6cd44c7c04f32eaeeb725d4af75691f73575e02907e8e3b69bced8030151e6
 EBUILD xfce4-weather-0.6.2.ebuild 431 RMD160 03b50b64db58e3f0fbbaf7af0410746a17d978e8 SHA1 087896c9ce647e8801c11ec2bf3e5a673e10096a SHA256 e321204cac47e4e8d85fe3599e3d2ee0c0b36657053f5922d552edc4830a4e32
 EBUILD xfce4-weather-0.6.4.ebuild 706 RMD160 9f290c15eba9ed6c18315008c583cbb8054c187c SHA1 dc4840c6a505ed7cf95923c39b36e7fbf595fe1c SHA256 a239d32142bf3f4e5fad46911d4a81655c8741739e2795078929674b60ce3e34
 EBUILD xfce4-weather-0.7.1.ebuild 751 RMD160 91cc353c81843f552cfee3d031b5ff159b845d0c SHA1 40ebd561ced37dfc2715177679b784cce8c749d3 SHA256 db161bf42dcc7f9182304251d1935dff8009cbd6274ef457e7eed4baebf56175
-MISC ChangeLog 7437 RMD160 35008e9dc8ed5d90d478fcc00f6fa67f32ee08c3 SHA1 2025f37979471402adf6073fb68f7254d0bafa9d SHA256 d77e2f25c39fa61840bd23b1d826ebba7259c7bde7a3ed6cc6f3175296a69a66
+EBUILD xfce4-weather-0.7.2.ebuild 909 RMD160 956ceb437e3d705012edf7ac5fa2ca17f58e891a SHA1 ff3b421c3926a65070eb8629389ebddea48cff0c SHA256 dddf5c2202c9bb7a5497693811bb41c4996d623f9752fc40adc7a9fb1b8972c5
+MISC ChangeLog 7587 RMD160 5e03c0930640bf36cadd229bc5b4423cf954be57 SHA1 a1ce0b106c00b63666ae7c5fcb79d1dbac798f67 SHA256 79d9a0f42f56847b53e4036f997aeabdf870b1504772e8ad291ea3f8171bff18
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
