@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-weather
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather/ChangeLog,v 1.59 2009/07/27 19:13:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-weather/ChangeLog,v 1.60 2009/08/01 01:21:16 darkside Exp $
+
+*xfce4-weather-0.7.2 (01 Aug 2009)
+
+  01 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
+  +xfce4-weather-0.7.2.ebuild:
+  version bump, bug 279801
 
   27 Jul 2009; Jeroen Roovers <jer@gentoo.org> xfce4-weather-0.6.4.ebuild:
   Stable for HPPA (bug #277475).
